--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 AC_INIT([tcpsocks], [1.4])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
-AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_FILES([
  Makefile
  src/Makefile
